fix scrollbar style (always visible), fix navigation link

--- a/_sass/generic.scss
+++ b/_sass/generic.scss
@@ -24,6 +24,7 @@ a {
 
 body {
   margin: 0;
+  overflow-y: scroll;
 }
 
 .container {
